--- a/clinic_appointment_booking/views/website_templates.xml
+++ b/clinic_appointment_booking/views/website_templates.xml
@@ -212,6 +212,9 @@
                 $(document).ready(function() {
                     // Form validation
                     $("#appointment_form").on('submit', function(e) {
+                        // Prevent form submission by default until validation passes
+                        e.preventDefault();
+
                         var isValid = true;
 
                         // Reset validation
@@ -243,7 +246,7 @@
                         var time = $('#appointment_time').val();
                         if (time) {
                             var hour = parseInt(time.split(':')[0]);
-                            if (hour &lt; 8 || hour &gt;= 21) {
+                            if (hour &lt; 1 || hour >= 14) {
                                 $('#appointment_time').addClass('is-invalid');
                                 alert('Thời gian hẹn phải từ 8:00 sáng đến 21:00 tối.');
                                 isValid = false;
@@ -251,10 +254,14 @@
                         }
 
                         if (!isValid) {
-                            e.preventDefault();
+                            // Scroll to first invalid field
                             $('html, body').animate({
                                 scrollTop: $('.is-invalid').first().offset().top - 100
                             }, 500);
+                            return false;
+                        } else {
+                            // Only submit the form if validation passes
+                            this.submit();
                         }
                     });
 
